# pylinalg

./: .gitignore  .readthedocs.yaml  CONVENTIONS.md  LICENSE  README.md  delete_me.py  pyproject.toml  scripts.py  setup.cfg
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst  make.bat  reference.rst
docs/_build/doctrees/: environment.pickle  index.doctree  reference.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/_build/html/_sources/: reference.rst.txt
pylinalg/: __init__.py  euler.py  geometry.py  matrix.py  misc.py  quaternion.py  vector.py  vector3.py
pylinalg/func/: CONVENTIONS.md  __init__.py  matrix.py  misc.py  quaternion.py  spherical.py  vector.py  vectors.py
tests/: conftest.py  hardware_info.py  test_euler.py  test_func_matrix.py  test_func_quaternion.py  test_func_vectors.py  test_geometry.py  test_matrix.py  test_matrix4.py  test_misc.py  test_obj_base.py  test_obj_matrix.py  test_obj_point.py  test_obj_quaternion.py  test_obj_vector.py  test_packaging.py  test_pylinalg.py  test_quaternion.py  test_utils.py  test_vector3.py  test_vector4.py  test_vectors.py  utils.py
tests/func/: test_matrix.py  test_misc.py  test_quaternion.py  test_vectors.py
