[tool.poetry]
name = "pylinalg"
version = "0.4.0"
description = "Linear algebra utilities for Python"
authors = ["Korijn van Golen <korijn@gmail.com>"]
license = "MIT"
homepage = "https://github.com/pygfx/pylinalg"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
flake8 = "*"
black = "*"
flake8-black = "*"
flake8-isort = "*"
pep8-naming = "*"
pytest-cov = "*"
packaging = "*"
twine = { version = "*", python = "<4.0.0" }
pytest-watcher = { version = "*", python = "<4.0.0" }
isort = { version = "*", python = "<4.0.0" }
hypothesis = {extras = ["numpy"], version = "^6.61.0"}

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "*"
sphinx-rtd-theme = "*"

[build-system]
requires = ["poetry>=1.4.2"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
